
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int HRESULT ;
 scalar_t__ FACILITY_VBS ;
 scalar_t__ HRESULT_FACILITY (int) ;
 int MAKE_VBSERROR (int ) ;
 scalar_t__ SUCCEEDED (int) ;





 int VBSE_ACTION_NOT_SUPPORTED ;
 int VBSE_ARRAY_LOCKED ;
 int VBSE_CANT_CREATE_OBJECT ;
 int VBSE_CANT_CREATE_TMP_FILE ;
 int VBSE_DISK_FULL ;
 int VBSE_FILE_ALREADY_EXISTS ;
 int VBSE_FILE_NOT_FOUND ;
 int VBSE_FUNC_ARITY_MISMATCH ;
 int VBSE_ILLEGAL_FUNC_CALL ;
 int VBSE_INVALID_DLL_FUNCTION_NAME ;
 int VBSE_INVALID_TYPELIB_VARIABLE ;
 int VBSE_IO_ERROR ;
 int VBSE_LOCALE_SETTING_NOT_SUPPORTED ;
 int VBSE_NAMED_ARGS_NOT_SUPPORTED ;
 int VBSE_NAMED_PARAM_NOT_FOUND ;
 int VBSE_NOT_ENUM ;
 int VBSE_OLE_FILE_NOT_FOUND ;
 int VBSE_OLE_NOT_SUPPORTED ;
 int VBSE_OLE_NO_PROP_OR_METHOD ;
 int VBSE_OUT_OF_BOUNDS ;
 int VBSE_OUT_OF_MEMORY ;
 int VBSE_OVERFLOW ;
 int VBSE_PARAMETER_NOT_OPTIONAL ;
 int VBSE_PATH_FILE_ACCESS ;
 int VBSE_PATH_NOT_FOUND ;
 int VBSE_PERMISSION_DENIED ;
 int VBSE_SERVER_NOT_FOUND ;
 int VBSE_TOO_MANY_FILES ;
 int VBSE_TYPE_MISMATCH ;

HRESULT map_hres(HRESULT hres)
{
    if(SUCCEEDED(hres) || HRESULT_FACILITY(hres) == FACILITY_VBS)
        return hres;

    switch(hres) {
    case 156: return MAKE_VBSERROR(VBSE_ACTION_NOT_SUPPORTED);
    case 157: return MAKE_VBSERROR(VBSE_OLE_NOT_SUPPORTED);
    case 162: return MAKE_VBSERROR(VBSE_OLE_NO_PROP_OR_METHOD);
    case 169: return MAKE_VBSERROR(VBSE_OLE_NO_PROP_OR_METHOD);
    case 165: return MAKE_VBSERROR(VBSE_NAMED_PARAM_NOT_FOUND);
    case 163: return MAKE_VBSERROR(VBSE_TYPE_MISMATCH);
    case 160: return MAKE_VBSERROR(VBSE_OLE_NO_PROP_OR_METHOD);
    case 168: return MAKE_VBSERROR(VBSE_NAMED_ARGS_NOT_SUPPORTED);
    case 170: return MAKE_VBSERROR(VBSE_INVALID_TYPELIB_VARIABLE);
    case 166: return MAKE_VBSERROR(VBSE_OVERFLOW);
    case 172: return MAKE_VBSERROR(VBSE_OUT_OF_BOUNDS);
    case 161: return MAKE_VBSERROR(VBSE_LOCALE_SETTING_NOT_SUPPORTED);
    case 173: return MAKE_VBSERROR(VBSE_ARRAY_LOCKED);
    case 171: return MAKE_VBSERROR(VBSE_FUNC_ARITY_MISMATCH);
    case 164: return MAKE_VBSERROR(VBSE_PARAMETER_NOT_OPTIONAL);
    case 167: return MAKE_VBSERROR(VBSE_NOT_ENUM);
    case 131: return MAKE_VBSERROR(VBSE_INVALID_DLL_FUNCTION_NAME);
    case 128: return MAKE_VBSERROR(VBSE_TYPE_MISMATCH);
    case 129: return MAKE_VBSERROR(VBSE_OUT_OF_BOUNDS);
    case 130: return MAKE_VBSERROR(VBSE_IO_ERROR);
    case 132: return MAKE_VBSERROR(VBSE_CANT_CREATE_TMP_FILE);
    case 145: return MAKE_VBSERROR(VBSE_OLE_FILE_NOT_FOUND);
    case 137: return MAKE_VBSERROR(VBSE_PATH_NOT_FOUND);
    case 134: return MAKE_VBSERROR(VBSE_TOO_MANY_FILES);
    case 149: return MAKE_VBSERROR(VBSE_PERMISSION_DENIED);
    case 144: return MAKE_VBSERROR(VBSE_OUT_OF_MEMORY);
    case 139: return MAKE_VBSERROR(VBSE_TOO_MANY_FILES);
    case 147: return MAKE_VBSERROR(VBSE_PERMISSION_DENIED);
    case 133: return MAKE_VBSERROR(VBSE_IO_ERROR);
    case 136: return MAKE_VBSERROR(VBSE_IO_ERROR);
    case 135: return MAKE_VBSERROR(VBSE_PATH_FILE_ACCESS);
    case 141: return MAKE_VBSERROR(VBSE_PERMISSION_DENIED);
    case 146: return MAKE_VBSERROR(VBSE_FILE_ALREADY_EXISTS);
    case 140: return MAKE_VBSERROR(VBSE_DISK_FULL);
    case 142: return MAKE_VBSERROR(VBSE_FILE_NOT_FOUND);
    case 143: return MAKE_VBSERROR(VBSE_PERMISSION_DENIED);
    case 138: return MAKE_VBSERROR(VBSE_PERMISSION_DENIED);
    case 148: return MAKE_VBSERROR(VBSE_IO_ERROR);
    case 151: return MAKE_VBSERROR(VBSE_CANT_CREATE_OBJECT);
    case 152: return MAKE_VBSERROR(VBSE_CANT_CREATE_OBJECT);
    case 153: return MAKE_VBSERROR(VBSE_OLE_FILE_NOT_FOUND);
    case 154: return MAKE_VBSERROR(VBSE_OLE_FILE_NOT_FOUND);
    case 175: return MAKE_VBSERROR(VBSE_CANT_CREATE_OBJECT);
    case 176: return MAKE_VBSERROR(VBSE_CANT_CREATE_OBJECT);
    case 177: return MAKE_VBSERROR(VBSE_CANT_CREATE_OBJECT);
    case 159: return MAKE_VBSERROR(VBSE_PERMISSION_DENIED);
    case 155: return MAKE_VBSERROR(VBSE_OUT_OF_MEMORY);
    case 158: return MAKE_VBSERROR(VBSE_ILLEGAL_FUNC_CALL);
    case 150: return MAKE_VBSERROR(VBSE_SERVER_NOT_FOUND);
    case 174: return MAKE_VBSERROR(VBSE_CANT_CREATE_OBJECT);
    }

    return hres;
}
